# group_project

./: .env  .env.docker  .env.example  .gitignore  API_DOC.md  Docker-compose.yml  Dockerfile  README.md  READMETG.md  Readmy_deploy.md  admin-functions.js  admin.go  api.js  auth.go  auth.js  bot.py  build.ps1  common-functions.js  courses.go  database.go  docker-compose.dev.yml  docker-compose.yml  else.js  go.mod  go.sum  index.html  login.html  main-module  main.go  questions.go  quiz.html  render.yaml  requirements.txt  stableversion003.html  start.sh  studenttest.http  styles.css  teacher-functions.js  teacher.go  teachertest.http  (+9 more)
authorization/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  auth.cpp  auth.h  build.ps1  build_final.ps1  check_paths.ps1  config.h  config.hpp  database.cpp  database.h  handlers.cpp  handlers.hpp  jwt.cpp  jwt.hpp  main.cpp  mongo.cpp  mongo.hpp  mysql.cpp  mysql.hpp  server.cpp  server.h  test.cpp  test.http  test_api.ps1  test_mysql.cpp  utils.cpp  utils.h  utils.hpp
authorization/src/auth/: auth.h
authorization/src/database/: database.cpp  database.h
authorization/src/utils/: utils.cpp  utils.h
css/: style.css
gettokens/: admin.go  teacher.go  test.go
java/: quiz.js  script.js  script2.js
telegram-bot/: .env  .env.docker  .env.example  Dockerfile  Dockerfile.telegram  README.md  bot.py  docker-compose.fixed.yml  docker-compose.yml  gfnfg.http  requirements.txt  run.bat  start.bat
test/: auth.go  database.go  main.go  test.go
tests/: admintest.http  studentsgetanswer.http  studenttest.http  teachertest.http  test.go
груповой проект 2/: stableversion002.html
